--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <body>
-<ul>
-<h>
-<li><a href='https://www.firstinspires.org/sites/default/files/uploads/resource_library/ftc/game-manual-part-1.pdf' target='_blank'>PDF link 1</a></li>
-<li><a href='http://www.ninfinger.org/models/pix/Mercury.pdf' target='_blank'>PDF link 2</a></li>
-<li><a href='http://chaoscultgames.com/products/CN/CoherentNoiseManual.pdf' target='_blank'>PDF link 3</a></li>
-</ul>
+<header>To replicate the bug, first click on the normal links, then click on the PDF links. The PDF links will cause a crash.</header>
 <ul>
 <li><a href='https://www.google.com/' target='_blank'>Normal link 1</a></li>
 <li><a href='https://www.example.com/' target='_blank'>Normal link 2</a></li>
 </ul>
+<ul>
+<li><a href='https://www.firstinspires.org/sites/default/files/uploads/resource_library/ftc/game-manual-part-1.pdf' target='_blank'>PDF link 1</a></li>
+<li><a href='http://www.ninfinger.org/models/pix/Mercury.pdf' target='_blank'>PDF link 2</a></li>
+<li><a href='http://chaoscultgames.com/products/CN/CoherentNoiseManual.pdf' target='_blank'>PDF link 3</a></li>
+</ul>
+<p>https://github.com/FlyOrBoom/BuggyChromeWebview</p>
 </body>
 </html>
