--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <header style='font-size:16pt'>Part of <a href='https://bugs.chromium.org/p/chromium/issues/detail?id=986664'>Chromium Bug 986664</a></header>
 <p>To replicate the bug, first click on the normal links, then click on the PDF links. The PDF links will cause a crash.</p>
 <ul>
-<li><a href='https://www.google.com/' target='_blank'>Normal link 1</a></li>
-<li><a href='https://www.example.com/' target='_blank'>Normal link 2</a></li>
+<li><a href='https://www.google.com/' target='_blank' rel='noreferrer noopener'>Normal link 1</a></li>
+<li><a href='https://www.example.com/' target='_blank' rel='noreferrer noopener'>Normal link 2</a></li>
 </ul>
 <ul>
-<li><a href='https://www.firstinspires.org/sites/default/files/uploads/resource_library/ftc/game-manual-part-1.pdf' target='_blank'>PDF link 1</a></li>
-<li><a href='http://www.ninfinger.org/models/pix/Mercury.pdf' target='_blank'>PDF link 2</a></li>
-<li><a href='http://chaoscultgames.com/products/CN/CoherentNoiseManual.pdf' target='_blank'>PDF link 3</a></li>
+<li><a href='https://www.firstinspires.org/sites/default/files/uploads/resource_library/ftc/game-manual-part-1.pdf' target='_blank' rel='noreferrer noopener'>PDF link 1</a></li>
+<li><a href='http://www.ninfinger.org/models/pix/Mercury.pdf' target='_blank' rel='noreferrer noopener'>PDF link 2</a></li>
+<li><a href='http://chaoscultgames.com/products/CN/CoherentNoiseManual.pdf' target='_blank' rel='noreferrer noopener'>PDF link 3</a></li>
 </ul>
 <p><a href='https://github.com/FlyOrBoom/BuggyChromeWebview'>Github</a></p>
 </body>
