--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <body>
-<header style='font-size:16pt'>Part of <a href='https://bugs.chromium.org/p/chromium/issues/detail?id=986664'>Chromium Bug 986664</a></header>
+<header style='font-size:16pt'>Part of <a target='_blank' href='https://bugs.chromium.org/p/chromium/issues/detail?id=986664'>Chromium Bug 986664</a></header>
 <p>To replicate the bug, first click on the normal links, then click on the PDF links. The PDF links will cause a crash.</p>
 <ul>
 <li><a href='https://www.google.com/' target='_blank' rel='noreferrer noopener'>Normal link 1</a></li>
