--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <li><a href='http://www.ninfinger.org/models/pix/Mercury.pdf' target='_blank' rel='noreferrer noopener'>PDF link 2</a></li>
 <li><a href='http://chaoscultgames.com/products/CN/CoherentNoiseManual.pdf' target='_blank' rel='noreferrer noopener'>PDF link 3</a></li>
 </ul>
-<p><a href='https://github.com/FlyOrBoom/BuggyChromeWebview'>Github</a></p>
+<p><a target='_blank' href='https://github.com/FlyOrBoom/BuggyChromeWebview'>Github</a></p>
 </body>
 </html>
